--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -5,7 +5,7 @@ EDITAL NO LINK ABAIXO:
 
 ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
 
-[[1-LÍNGUA PORTUGUESA]]
+[1-LÍNGUA PORTUGUESA](3-MATEMÁTICA FINANCEIRA.md)
 [[2-LÍNGUA INGLESA]]
 [[3-MATEMÁTICA FINANCEIRA]]
 [[4-NOÇÕES DE PROBABILIDADE E ESTATÍSTICA]]
