--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -5,7 +5,7 @@ EDITAL NO LINK ABAIXO:
 
 ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
 
-[1-LÍNGUA PORTUGUESA](3-MATEMÁTICA FINANCEIRA.md)
+[1-LÍNGUA PORTUGUESA](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/1-L%C3%8DNGUA%20PORTUGUESA.md)
 [[2-LÍNGUA INGLESA]]
 [[3-MATEMÁTICA FINANCEIRA]]
 [[4-NOÇÕES DE PROBABILIDADE E ESTATÍSTICA]]
