--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -6,7 +6,7 @@ EDITAL NO LINK ABAIXO:
 ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
 
 [1-LÍNGUA PORTUGUESA](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/1-L%C3%8DNGUA%20PORTUGUESA.md)
-[[2-LÍNGUA INGLESA]]
+[2-LÍNGUA INGLESA](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/2-L%C3%8DNGUA%20INGLESA.md)
 [[3-MATEMÁTICA FINANCEIRA]]
 [[4-NOÇÕES DE PROBABILIDADE E ESTATÍSTICA]]
 [[5-COMPORTAMENTOS ÉTICOS E COMPLIANCE]]
