--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -11,7 +11,8 @@ ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
 
 [3-MATEMÁTICA FINANCEIRA](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/3-MATEM%C3%81TICA%20FINANCEIRA.md)
 
-[[4-NOÇÕES DE PROBABILIDADE E ESTATÍSTICA]]
+[4-NOÇÕES DE PROBABILIDADE E ESTATÍSTICA](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/4-NO%C3%87%C3%95ES%20DE%20PROBABILIDADE%20E%20ESTAT%C3%8DSTICA.md)
+
 [[5-COMPORTAMENTOS ÉTICOS E COMPLIANCE]]
  
 CONHECIMENTOS ESPECÍFICOS - TÉCNICO BANCÁRIO NOVO
