--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -13,7 +13,7 @@ ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
 
 [4-NOÇÕES DE PROBABILIDADE E ESTATÍSTICA](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/4-NO%C3%87%C3%95ES%20DE%20PROBABILIDADE%20E%20ESTAT%C3%8DSTICA.md)
 
-[[5-COMPORTAMENTOS ÉTICOS E COMPLIANCE]]
+[5-COMPORTAMENTOS ÉTICOS E COMPLIANCE](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/5-COMPORTAMENTOS%20%C3%89TICOS%20E%20COMPLIANCE.md)
  
 CONHECIMENTOS ESPECÍFICOS - TÉCNICO BANCÁRIO NOVO
 
