--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -17,9 +17,14 @@ ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
  
 CONHECIMENTOS ESPECÍFICOS - TÉCNICO BANCÁRIO NOVO
 
-[[6-CONHECIMENTOS BANCÁRIOS]]
-[[7-CONHECIMENTOS DE TECNOLOGIA DA INFORMAÇÃO E COMUNICAÇÃO]]
-[[8-CONHECIMENTOS E COMPORTAMENTOS DIGITAIS]]
-[[9-ATENDIMENTO BANCÁRIO]]
+[6-CONHECIMENTOS BANCÁRIOS](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/6-CONHECIMENTOS%20BANC%C3%81RIOS.md)
+
+[7-CONHECIMENTOS DE TECNOLOGIA DA INFORMAÇÃO E COMUNICAÇÃO](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/7-CONHECIMENTOS%20DE%20TECNOLOGIA%20DA%20INFORMA%C3%87%C3%83O%20E%20COMUNICA%C3%87%C3%83O.md)
+
+[8-CONHECIMENTOS E COMPORTAMENTOS DIGITAIS](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/8-CONHECIMENTOS%20E%20COMPORTAMENTOS%20DIGITAIS.md)
+
+[9-ATENDIMENTO BANCÁRIO](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/9-ATENDIMENTO%20BANC%C3%81RIO.md)
+
+[Voltar para o ÍNDICE](https://github.com/andersonjeronimo/concurso_caixa_2024/blob/main/0.%20INDEX.md)
 
 
