--- a/0. INDEX.md
+++ b/0. INDEX.md
@@ -1,6 +1,6 @@
 CONCURSO TÉCNICO BANCÁRIO 2024
 
-EDITAL NO LINK ABAIXO: 
+LINK DO EDITAL (SITE CESGRANRIO): 
 [TÉCNICO BANCÁRIO NOVO E TÉCNICO BANCÁRIO NOVO - TECNOLOGIA DA INFORMAÇÃO EDITAL Nº 01/2024/NM, DE 22 DE FEVEREIRO DE 2024](https://caixa.cesgranrio.org.br/outros/docs/editais/edital-caixa-nivel-medio-2024-03-13-retificado.pdf?sp=r&st=2024-03-13T13:47:44Z&se=2026-03-13T21:47:44Z&spr=https&sv=2022-11-02&sr=b&sig=kjOWsqTJM26LAD8GRwV%2Bq2%2f0U46hw3nQfibcjgk9rwM%3D)
 
 ANEXO IV - CONTEÚDO PROGRAMÁTICO CONHECIMENTOS BÁSICOS/TBN E TBN TI
